...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.studiofive.recipeapp.ui.MainActivity">

        <Button
        android:id="@+id/findRecipesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="See our various recipes"
        android:background="@color/textIcons"
        android:textColor="@color/colorDivider"
        android:textSize="15sp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="DuplicateIds" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:hint="Hungry for..."
        android:inputType="text"
        android:padding="10dp"
...
