...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/displaySearch"
        android:layout_width="9dp"
        android:layout_height="3dp"
        android:text="Recipes found associated with search item:"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
